MMA-5858: Oppgradert til Java 17