@@ -74,8 +74,8 @@
         <maven.surefire.version>3.0.0-M2</maven.surefire.version>
         <maven.failsafe.version>3.0.0-M2</maven.failsafe.version>
         <scala.maven.version>4.4.0</scala.maven.version>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
 
         <!--Test -->
         <junit.version>5.7.0</junit.version>
@@ -845,7 +845,8 @@
                     </dependencies>
                     <configuration>
                         <argLine>
-                            --illegal-access=permit
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                         </argLine>
                         <properties>
                             <excludedGroups>integration-test</excludedGroups>
@@ -900,7 +901,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>11</version>
+                            <version>17</version>
                             <vendor>openjdk</vendor>
                         </jdk>
                     </toolchains>
